<resources>
    <string name="app_name">Outdoor Partners</string>
    <string name="event_name">Event Name:</string>
    <string name="enter_a_name_for_your_event">Enter a name for your event!</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="enter_a_description_of_your_event">Enter a description of your event!</string>
    <string name="upload_event">Upload Event</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_maps">FindEventsActivity</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="where_will_this_location_be">Where will this location be?</string>
</resources>