<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:text="@string/event_name"
        app:layout_constraintBottom_toTopOf="@+id/buttonSetDate"
        app:layout_constraintEnd_toStartOf="@+id/editTextEventName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEventName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/enter_a_name_for_your_event"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEventName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewEventName"
        app:layout_constraintTop_toTopOf="@+id/textViewEventName" />

    <Button
        android:id="@+id/buttonSetDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:text="@string/date"
        app:layout_constraintBottom_toTopOf="@+id/spinnerEventType"
        app:layout_constraintEnd_toStartOf="@+id/buttonSetTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEventName" />

    <Button
        android:id="@+id/buttonSetTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="5dp"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSetDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSetDate"
        app:layout_constraintTop_toTopOf="@+id/buttonSetDate" />

    <EditText
        android:id="@+id/editTextEventDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_a_description_of_your_event"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEventType" />

    <Spinner
        android:id="@+id/spinnerEventType"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEventDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSetDate" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonUploadEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventDescription" />

    <Button
        android:id="@+id/buttonUploadEvent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/dark_green"
        android:text="@string/upload_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="5dp"
        android:background="@color/cancel_red"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/buttonUploadEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonUploadEvent"
        app:layout_constraintTop_toTopOf="@+id/buttonUploadEvent" />

</androidx.constraintlayout.widget.ConstraintLayout>